--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }} !
-  </h1>
+  <h1> Welcome to {{ title }} !</h1>
+  <h1>Login</h1>
 
   <app-sign-in-form [userList]="users" (addNewUser)=" addNewUser($event)"></app-sign-in-form>
 
