--- a/src/app/sign-in-form/sign-in-form.component.html
+++ b/src/app/sign-in-form/sign-in-form.component.html
@@ -33,3 +33,16 @@
   </form>
 
 </div>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:orange;">
+  <a class="navbar-brand brand-custom" href="#">My Account</a>
+  <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+              <a class="nav-link login-custom" href="#">Transfers</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link register-custom" href="#">Transactions</a>
+          </li>
+      </ul>
+  </div>
+</nav>
