--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-
+<!--The content below is only a placeholder and can be replaced.-->
+<div style="text-align:center">
+	<h1> Welcome to {{ title }} !</h1>
+	<h1></h1>
+  
+	<app-sign-in-form [userList]="users" (addNewUser)=" addNewUser($event)"></app-sign-in-form>
+  
+  
+	<router-outlet></router-outlet>
+  </div>
+  
