registration form created + registration backend + hashing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
 	<h1> Welcome to {{ title }} !</h1>
 	<h1></h1>
-  
+  <app-registration></app-registration>
 	<app-sign-in-form [userList]="users" (addNewUser)=" addNewUser($event)"></app-sign-in-form>
   
   
