--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<head>
+	<base href="/">
+</head>
 <div style="text-align:center">
 	<h1> Welcome to {{ title }} !</h1>
-	<h1></h1>
-  <app-registration></app-registration>
-	<app-sign-in-form [userList]="users" (addNewUser)=" addNewUser($event)"></app-sign-in-form>
+	
+	<a routerLink="/login">Login</a><br/>
+	<a routerLink='/register'>registration</a>
   
   
 	<router-outlet></router-outlet>
