--- a/src/app/sign-in-form/sign-in-form.component.css
+++ b/src/app/sign-in-form/sign-in-form.component.css
@@ -14,3 +14,11 @@ a
   text-underline-position:alphabetic;
   cursor:pointer;
 }
+.example-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.example-container > * {
+  width: 100%;
+}
