--- a/src/app/sign-in-form/sign-in-form.component.html
+++ b/src/app/sign-in-form/sign-in-form.component.html
@@ -1,17 +1,20 @@
 <h1>Login</h1>
 
-<div style="text-align:center">
- 
-  <form [formGroup]="logInForm" (ngSubmit)="logInFormHandler()" *ngIf="showLogIn">
+
+ <form [formGroup]="logInForm" (ngSubmit)="logInFormHandler()" *ngIf="showLogIn">
 
    
     <div id="returnMessage" [innerHTML]="returnMessage"></div>
-    <input type="text" formControlName="username" name="username" placeholder="username" />
-    <br />
-    <input type="password" formControlName="password" name="password" placeholder="password" />
-    <br />
-    <input type="submit" /><br />
-     go to your account ? <a (click)="switchFormDisplay()">My accounts</a>
+   <mat-form-field>
+    <input matInput formControlName="username" name="username" placeholder="username" /></mat-form-field><br>
+   <mat-form-field>
+
+    <input matInput formControlName="password" type ="password"  placeholder="password" />
+</mat-form-field><br>
+
+<button mat-button color="warn">login</button><br />
+
+     Go to your accounts now - <a (click)="switchFormDisplay()">My accounts</a>
   </form>
 
 
@@ -29,7 +32,7 @@
     Back to login! <a (click)="switchFormDisplay()">Log In</a>
   </form>
 
-</div>
+
 <!---- 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color:orange;">
   <a class="navbar-brand brand-custom" href="My Accounts">My Account</a>
