--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -9,3 +9,5 @@
 <button onclick="Transfer()">Settings</button>
 <button onclick="Transfer()">Contact Support</button>
 <button onclick="">Contact Support</button>
+
+<p><app-account Account={{AccountList}}></app-account></p>
