register and my account page working
register/my account styled

--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -3,9 +3,12 @@
 
 
 
-<button onclick="Transfer()">My Accounts</button>
-<button onclick="Transfer()">Transactions</button>
-<button onclick="Transfer()">Transfer</button>
-<button onclick="Transfer()">Settings</button>
-<button onclick="Transfer()">Contact Support</button>
-<button onclick="">Contact Support</button>
+<a mat-raised-button routerLink=".">My Account</a>
+
+<a mat-raised-button routerLink=".">Transactions</a>
+
+<a mat-raised-button routerLink=".">Transfer</a>
+
+<a mat-raised-button routerLink=".">Settings</a>
+
+<a mat-raised-button routerLink=".">Contact Support</a>
