--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,6 +1,39 @@
-<h1>Register</h1>
+
+<mat-toolbar>User Registration</mat-toolbar>
 
 <form [formGroup]="registerForm" (ngSubmit)="registerFormHandler()">
+
+
+ <div id="returnMessage" [innerHTML]="returnMessage"></div>
+ <mat-form-field>
+   <input matInput formControlName="username" name="username" placeholder="Username" />
+ </mat-form-field><br>
+
+ <mat-form-field>
+   <input matInput formControlName="password" type ="password"  placeholder="Password" />
+
+ </mat-form-field><br>
+
+ <mat-form-field>
+   <input matInput formControlName="password" type ="password"  placeholder="Re-type Password" />
+ </mat-form-field><br>
+
+ <mat-form-field>
+   <input matInput formControlName="email" type ="email"  placeholder="Email Id" />
+ </mat-form-field><br>
+
+ <mat-form-field>
+   <input matInput formControlName="SSN_TIN" type ="password"  placeholder="SSN or TIN" />
+ </mat-form-field><br>
+
+ <button mat-button color="warn">login</button><br />
+
+</form>
+
+
+<router-outlet></router-outlet>
+
+<!---<form [formGroup]="registerForm" (ngSubmit)="registerFormHandler()">
 
    
     <div id="returnMessage" [innerHTML]="returnMessage"></div>
@@ -15,3 +48,4 @@
     <input type="submit" /><br />
      
   </form>
+--->
