--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -7,6 +7,8 @@
  <div id="returnMessage" [innerHTML]="returnMessage"></div>
  <mat-form-field>
    <input matInput formControlName="username" name="username" placeholder="Username" />
+   <mat-hint align="end">Min 8 Characters</mat-hint>
+<br />
  </mat-form-field><br>
 
  <mat-form-field>
