--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -12,6 +12,7 @@
 <a mat-raised-button routerLink=".">Settings</a>
 
 <a mat-raised-button routerLink=".">Contact Support</a>
+<a mat-raised-button routerLink=".">Logout</a>
 
 <div *ngFor= "let Account of AccountList">
     <p><app-account *ngIf="AccountList" Account={{Account}}></app-account></p>
