--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -13,6 +13,7 @@
 
  <mat-form-field>
    <input matInput formControlName="password" type ="password"  placeholder="Password" />
+   <mat-hint align="end">Min 5 Characters must include at least one letter and symbol</mat-hint>
 
  </mat-form-field><br>
 
@@ -34,20 +35,3 @@
 
 
 <router-outlet></router-outlet>
-
-<!---<form [formGroup]="registerForm" (ngSubmit)="registerFormHandler()">
-
-   
-    <div id="returnMessage" [innerHTML]="returnMessage"></div>
-    <input type="text" formControlName="username" name="username" placeholder="username" />
-    <br />
-    <input type="password" formControlName="password" name="password" placeholder="password" />
-    <br />
-    <input type="text" formControlName="email" name="email" placeholder="email" />
-    <br />
-    <input type="text" formControlName="SSN_TIN" name="SSN_TIN" placeholder="SSN_TIN" />
-    <br />
-    <input type="submit" /><br />
-     
-  </form>
---->
