--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -29,7 +29,7 @@
    <input matInput formControlName="SSN_TIN" type ="password"  placeholder="SSN or TIN" />
  </mat-form-field><br>
 
- <button mat-button color="warn">login</button><br />
+ <button mat-button color="warn">register</button><br />
 
 </form>
 
