--- a/src/app/sign-in-form/sign-in-form.component.html
+++ b/src/app/sign-in-form/sign-in-form.component.html
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 
-<form [formGroup]="logInForm" (ngSubmit)="logInFormHandler()" *ngIf="showLogIn">
+<form [formGroup]="logInForm" (ngSubmit)="logInFormHandler()" >
 
    
     <div id="returnMessage" [innerHTML]="returnMessage" style="border: 1px red;"></div>
