--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -21,22 +21,24 @@
                 <h1>Hi</h1>
                 <p>You're logged in to Axle Banking!!</p>
 
-             
-<table *ngIf="AccountList" style="width:800px; margin:0 auto;">
+  <div *ngIf="AccountList">         
+<table  style="width:800px; margin:0 auto; border: 1px solid #000;">
         <tr>
             <td>Account Type</td>
             <td>Account Number</td>
             <td>Balance</td>
         </tr>
-        
-           <tr *ngFor= "let Account of AccountList">
+</table>
+
+        <table  style="width:800px; margin:0 auto; border: 1px solid #000;">        
+           <tr *ngFor= "let Account of AccountList" style="width:100%; border: 1px solid #000;">
                 <app-account *ngIf="AccountList" [Account]="Account"></app-account>
-        </tr>
+           </tr>
         
         
         
         </table>
-
+    </div>  
 
 
         </mat-sidenav-content>
