--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -3,15 +3,15 @@
 <mat-sidenav-container fullscreen>
         <mat-sidenav mode="side" opened>
            
-            <a mat-raised-button routerLink=".">My Account</a>
+            <a mat-raised-button routerLink="/accounts">My Account</a>
             <br>
-            <a mat-raised-button routerLink=".">Transfer</a>
+            <a mat-raised-button routerLink='/transfer'>Transfer</a>
             <br>
             <a mat-raised-button routerLink=".">Settings</a>
             <br>
             <a mat-raised-button routerLink=".">Contact Support</a>
             <br>
-            <a mat-raised-button routerLink=".">Logout</a>
+            <a mat-raised-button routerLink="/login">Logout</a>
       
             
         </mat-sidenav>
