--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -28,12 +28,13 @@
             <td>Account Number</td>
             <td>Balance</td>
         </tr>
-</table>
 
-        <table  style="width:800px; margin:0 auto; border: 1px solid #000;">        
-           <tr *ngFor= "let Account of AccountList" style="width:100%; border: 1px solid #000;">
+
+        <tr *ngFor= "let Account of AccountList" style="width:800px; margin:0 auto; border: 1px solid #000;" >        
+           
                 <app-account *ngIf="AccountList" [Account]="Account"></app-account>
-           </tr>
+        </tr>
+           
         
         
         
