--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -25,8 +25,22 @@
 
    
                         <div id="returnMessage" [innerHTML]="returnMessage" style="border: 1px red;"></div>
-                       <mat-form-field>
-                        <input matInput formControlName="sender_account_number" name="sender_account_number" placeholder="Senders Account Number" /></mat-form-field><br>
+                      
+                        
+                        <mat-form-field>
+                        <mat-label>Select an Account</mat-label>
+                        <mat-select [(value)]="selected">
+                             <mat-option>None</mat-option>
+                             <mat-option value="option1">Option 1</mat-option>
+                             <mat-option value="option2">Option 2</mat-option>
+                             <mat-option value="option3">Option 3</mat-option>
+                        </mat-select>
+                        </mat-form-field>
+
+
+
+
+                        <br>
                        
                         <mat-form-field>
                         <input matInput formControlName="recipient_account_number" type ="recipient_account_number"  placeholder="Recipients Account Number" /></mat-form-field><br>
@@ -35,10 +49,23 @@
                         <input matInput formControlName="amount" type ="amount"  placeholder="Amount" /></mat-form-field><br>
 
                         <mat-form-field>
-                                <input matInput formControlName="note" type ="note"  placeholder="Description" /></mat-form-field><br>
+                        <input matInput formControlName="note" type ="note"  placeholder="Description" /></mat-form-field><br>
                     
                     
                     <button mat-raised-button>Transfer</button><br />
+
+
+                    
+
+
+
+
+
+
+
+
+
+
                     </form>
 
 
