--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,20 +1,21 @@
 
-<mat-sidenav-container fullscreen>
-        <mat-sidenav mode="side" opened>
-           
-            <a mat-raised-button routerLink="/accounts">My Account</a>
-            <br>
-            <a mat-raised-button routerLink=".">Transfer</a>
-            <br>
-            <a mat-raised-button routerLink=".">Settings</a>
-            <br>
-            <a mat-raised-button routerLink=".">Contact Support</a>
-            <br>
-            <a mat-raised-button routerLink="/login">Logout</a>
-      
-            
-        </mat-sidenav>
-        <mat-sidenav-content>
+                <mat-sidenav-container fullscreen>
+                        <mat-sidenav mode="side" opened>
+                           
+                            <a mat-raised-button routerLink="/accounts">My Account</a>
+                            <br>
+                            <a mat-raised-button routerLink='/transfer'>Transfer</a>
+                            <br>
+                            <a mat-raised-button routerLink=".">Settings</a>
+                            <br>
+                            <a mat-raised-button routerLink=".">Contact Support</a>
+                            <br>
+                            <a mat-raised-button routerLink="/login">Logout</a>
+                            <br>
+                            
+                            
+                        </mat-sidenav>
+                        <mat-sidenav-content>
 
 
                 <h1>Hi</h1>
@@ -29,21 +30,26 @@
                         
                         <mat-form-field>
                         <mat-label>Select an Account</mat-label>
-                        <mat-select [(value)]="selected">
-                             <mat-option>None</mat-option>
-                             <mat-option value="option1">Option 1</mat-option>
-                             <mat-option value="option2">Option 2</mat-option>
-                             <mat-option value="option3">Option 3</mat-option>
+                        <mat-select [(value)]="selected" formControlName="sender_account_number">
+                            <mat-option *ngFor="let Account of AccountList" value={{Account.account_number}}>{{Account.account_number}}: ${{Account.balance}}</mat-option>
+
                         </mat-select>
                         </mat-form-field>
-
-
-
-
                         <br>
-                       
+
                         <mat-form-field>
-                        <input matInput formControlName="recipient_account_number" type ="recipient_account_number"  placeholder="Recipients Account Number" /></mat-form-field><br>
+                                <mat-label>Select a Recipient from recipient list</mat-label>
+                                <mat-select [(value)]="f" formControlName="recipient_account_number">
+                                    <mat-option *ngFor="let Recipient of RecipientList" value={{Recipient.recipient_account_numb}}>{{Recipient.recipient_alias}}</mat-option>
+        
+                                </mat-select>
+                                </mat-form-field>
+                                <br />
+                       
+                        <!--<mat-form-field>
+                        <input matInput formControlName="recipient_account_number" type ="recipient_account_number"  placeholder="Recipients Account Number" /></mat-form-field> <br />-->
+
+                        <a mat-raised-button routerLink="/addRecipient" class="endFormButton">Add Recipient</a><br>
 
                         <mat-form-field>
                         <input matInput formControlName="amount" type ="amount"  placeholder="Amount" /></mat-form-field><br>
@@ -52,7 +58,7 @@
                         <input matInput formControlName="note" type ="note"  placeholder="Description" /></mat-form-field><br>
                     
                     
-                    <button mat-raised-button>Transfer</button><br />
+                    <button mat-raised-button > Transfer</button>  
 
 
                     
