--- a/src/app/add-recipient/add-recipient.component.html
+++ b/src/app/add-recipient/add-recipient.component.html
@@ -1,15 +1,15 @@
 <mat-sidenav-container fullscreen>
         <mat-sidenav mode="side" opened>
            
-            <a mat-raised-button routerLink="/accounts">My Account</a>
+            <a mat-raised-button routerLink="/accounts" style="width : 100%">My Account</a>
             <br>
-            <a mat-raised-button routerLink='/transfer'>Transfer</a>
+            <a mat-raised-button routerLink='/transfer' style="width : 100%">Transfer</a>
             <br>
-            <a mat-raised-button routerLink=".">Settings</a>
+            <a mat-raised-button routerLink="." style="width : 100%">Settings</a>
             <br>
-            <a mat-raised-button routerLink=".">Contact Support</a>
+            <a mat-raised-button routerLink="." style="width : 100%">Contact Support</a>
             <br>
-            <a mat-raised-button routerLink="/login">Logout</a>
+            <a mat-raised-button routerLink="/login" style="width : 100%">Logout</a>
 
             
         </mat-sidenav>
@@ -26,20 +26,20 @@
                    <mat-form-field >
                     <input matInput formControlName="recipient_account_number" name="recipient_account_number" placeholder="Recipient Account Number" /> </mat-form-field><br>
                    
-                    Don't have an account number? <a type="button"  (click)="changeRecipientFinder()">Add Recipient By Email</a>
+                    Don't have an account number? <a type="button"  (click)="changeRecipientFinder()"  style="text-decoration: underline;">Add Recipient By Email</a>
                         
                     </div>
 
                     <div *ngIf="!(displayAccountNum)">
-                        <mat-form-field>
-                                <input matInput formControlName="email" name="email" placeholder="email" /></mat-form-field><br>
+                        <mat-form-field class="input-full-width">
+                                <input matInput formControlName="email" name="email" placeholder="Email" /></mat-form-field><br>
                                
-                                Don't have an email? <a type="button" (click)="changeRecipientFinder()">Add Recipient By Account Number</a>
+                                Don't have an email? <a type="button" (click)="changeRecipientFinder()" style="text-decoration: underline;">Add Recipient By Account Number</a>
                                         
                             </div>
 
                             
-                <mat-form-field>
+                <mat-form-field class="input-full-width">
                  <input matInput formControlName="alias" type ="alias"  placeholder="Recipient Alias " />
                 </mat-form-field><br>
                 
