--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,6 +1,8 @@
-
+<table style="width:500px; margin:0 auto; border: 1px solid #000;">
+    <tr>
 <td>{{type}}</td>
 <td>{{Account.account_number}}</td>
 <td>${{Account.balance}}</td>
-
+</tr>
+</table>
 
