--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,4 +1,4 @@
-
+<div class="container">
 <mat-sidenav-container fullscreen>
         <mat-sidenav mode="side" opened>
            
@@ -90,3 +90,4 @@
 
         </mat-sidenav-content>
       </mat-sidenav-container>
+    </div>
