--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,7 +1,7 @@
-<table style="width:500px; margin:0 auto; border: 1px solid #000;">
-    <tr>
+<table style="width: 55%; margin:0 auto; border-bottom: 1px solid #000; font-size:1.5vw;">
+    <tr >
 <td>{{type}}</td>
-<td>{{Account.account_number}}</td>
+<td >{{Account.account_number}}</td>
 <td>${{Account.balance}}</td>
 </tr>
 </table>
