--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -35,7 +35,7 @@
 
 
   <div *ngIf="AccountList">         
-<table  style="width:500px; margin:0 auto; border: 1px solid #000;">
+<table  style="width: 55%; margin:0 auto; border: 1px solid #000; font-size:1.5vw;">
         <tr>
             <td>Account Type</td>
             <td>Account Number</td>
@@ -43,7 +43,7 @@
         </tr>
       </table>
 
-        <div *ngFor= "let Account of AccountList" style="width:800px; margin:0 auto;margin-top:1%; border-collapse: collapse;" >        
+        <div *ngFor= "let Account of AccountList"  >        
            <app-account *ngIf="AccountList" [Account]="Account"></app-account>
         </div>
            
