--- a/src/app/sign-in-form/sign-in-form.component.html
+++ b/src/app/sign-in-form/sign-in-form.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>Login</h1>
 
 <form [formGroup]="logInForm" (ngSubmit)="logInFormHandler()" class="form-full-width" >
@@ -17,6 +18,6 @@
 
 
  <router-outlet></router-outlet>
-
+</div>
 
 
