--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,4 @@
-<table style="width:500px; margin:0 auto; border: 1px solid #000;">
+<table style="width:100%; margin:0 auto; margin-top:1%; border-collapse: collapse; font-size: 7;">
     <tr>
 <td>{{type}}</td>
 <td>{{Account.account_number}}</td>
