--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -3,26 +3,7 @@
         <mat-sidenav mode="side" opened>
            
           
-                <mat-accordion>
-                        <mat-expansion-panel>
-                          <mat-expansion-panel-header>
-                            <mat-panel-title>
-                             Menu Options
-                            </mat-panel-title>
-                          </mat-expansion-panel-header>
-                      
-                            <a mat-raised-button routerLink="/accounts" style="width : 100%">My Account</a>
-                            <br>
-                            <a mat-raised-button routerLink='/transfer' style="width : 100%">Transfer</a>
-                            <br>
-                            <a mat-raised-button routerLink="." style="width : 100%">Settings</a>
-                            <br>
-                             <a mat-raised-button routerLink="." style="width : 100%">Contact Support</a>
-                            <br>
-                            <a mat-raised-button routerLink="/login" style="width : 100%">Logout</a>
-    
-                        </mat-expansion-panel>
-                    </mat-accordion>
+                <app-navbar></app-navbar>
     
             </mat-sidenav>
         <mat-sidenav-content>
