--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,4 +1,4 @@
-
+<body sytle="background-color:lightgreen;">
 <!---Begining of navbar, each button is routed to a seprate page-->
 <mat-sidenav-container fullscreen>
     
@@ -37,3 +37,4 @@
 
         </mat-sidenav-content>
       </mat-sidenav-container>
+    </body>
